--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -24,7 +24,7 @@
       <div class="col">
         <div class="form-group">
           <label
-              for="area">Alapterület (m2)</label>
+              for="area">Alapterület (m<sup>2</sup>)</label>
           <input
               class="form-control"
               formControlName="area"
