--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -26,11 +26,14 @@
         </div>
     </div>
     <div>
-        <h3><strong>Ingatlan bemutatása</strong></h3>
+        <h3><strong>Ingatlan bemutatása</strong></h3><hr>
 
         <div class="row" id="description-div">
             <div class="col">
                 <strong>Ingatlan:</strong> {{propertyDetails?.name + " "}}
+            </div>
+            <div class="col">
+                <strong>Típus:</strong> {{propertyDetails?.propertyType + " "}}
             </div>
             <div class="col">
                 <strong>Szobák száma:</strong> {{propertyDetails?.numberOfRooms}}
@@ -39,8 +42,23 @@
                 <strong>Ár:</strong> {{propertyDetails?.price}}
             </div>
         </div>
+        <div class="row" id="details-div">
+
+            <div class="col">
+                <strong>Megye:</strong> {{propertyDetails?.county}}
+            </div>
+            <div class="col">
+                <strong>Város:</strong> {{propertyDetails?.city}}
+            </div>
+            <div class="col">
+                <strong>Állapot:</strong> {{propertyDetails?.propertyState}}
+            </div>
+            <div class="col">
+                <strong>Építés éve:</strong> {{propertyDetails?.buildingYear + " "}}
+            </div>
+        </div>
     </div>
-    <p></p>
+    <p></p><hr>
     <p><strong>Részletes leírás:</strong></p>
     <p>{{propertyDetails?.description}}</p>
 
