fix property-list.component.html, and validators

--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -34,7 +34,7 @@
           />
           <small *ngIf="propertyForm.get('area').invalid && propertyForm.get('area').touched
           && !propertyForm.get('area').errors?.serverError" class="text-danger">
-            Az alapterület nem lehet negatív!
+            Az alapterület nem lehet kisebb, mint 1!
           </small>
           <small *ngIf="propertyForm.get('area').errors?.serverError" class="text-danger">
             {{propertyForm.get('area').errors['serverError']}}
