refact design-frontend

--- a/moovsmart/src/app/components/welcome/welcome.component.html
+++ b/moovsmart/src/app/components/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="container jumbotron" xmlns="http://www.w3.org/1999/html">
+<div class="container jumbotron mw-75 mh-50" xmlns="http://www.w3.org/1999/html">
     <div id="main-div-container">
         <div id="main-img-holder">
             <h3>Isten hozta <br>a MoovSmart ingatlan aukciós portálon!</h3>
@@ -11,7 +11,7 @@
 
         </div>
         <p id="link-paragraph"><strong>A feltöltéshez, ingatlanokra történő licitlási lehetőséghez,
-            kérjük <a routerLink="/registration">jelentkezzen </a> be!</strong></p>
+            kérjük <a routerLink="/signin">jelentkezzen </a> be!</strong></p>
         <hr>
         <div id="link-holder">
             <div id="left-img-holder">
@@ -23,13 +23,13 @@
             <div id="right-img-holder">
                 <a routerLink="/registration">
                     <img src="assets/img/registrating.jpg" alt="picture" class="img-link-surfing"></a>
-                <p><a routerLink="/property-form"><strong>Ingatlant szeretnék regisztrálni</strong></a></p>
+                <p><a routerLink="/signin"><strong>Ingatlant szeretnék regisztrálni</strong></a></p>
             </div>
 
             <div id="mid-img-holder">
                 <a routerLink="/registration">
                     <img src="assets/img/online_aukcio.jpg" alt="picture" class="img-link-surfing"></a>
-                <p><a routerLink="/registration"><strong>Ingatlanra akarok licitálni</strong></a></p>
+                <p><a routerLink="/signin"><strong>Ingatlanra akarok licitálni</strong></a></p>
             </div>
 
         </div>
