--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -213,7 +213,7 @@
               formControlName="city"
               id="city"
               name="city"
-              placeholder=""
+              [placeholder]="propertyForm.get('city')"
           />
           <small *ngIf="propertyForm.get('city').invalid && propertyForm.get('city').touched
        && !propertyForm.get('city').errors?.serverError" class="text-danger">
