--- a/moovsmart/src/app/components/registration/registration.component.html
+++ b/moovsmart/src/app/components/registration/registration.component.html
@@ -98,7 +98,7 @@
                 <p id="error-message">A regisztráció sikertelen. Ezzel az e-mail címmel már regisztráltak.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn" data-dismiss="modal" (click)="closeModalDialogError()">Close</button>
+                <button type="button" class="btn" data-dismiss="modal" (click)="closeModalDialogError()">Bezárás</button>
             </div>
         </div>
     </div>
